# hope

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_Line_Edit.md  agent_1_coding_specialist.md  agent_2_debugging_specialist.md  agent_3_monitoring_specialist.md  cache_utils.py  settings.json  user_settings.json
showup-core/: .gitignore  (+9 more)
showup-tools/gmail_chatbot/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.MD  LICENSE  TODO.md  pyproject.toml  requirements.txt  run_gmail_chatbot.bat  setup.bat
showup-tools/gmail_chatbot/data/memory/: interaction_memory.json  preferences.json
showup-tools/gmail_chatbot/gmail_chatbot/: __init__.py  cli.py  email_config.py  email_gui.py  email_main.py  email_vector_db.py  enhanced_memory.py  safe_logger.py
showup-tools/gmail_chatbot/gmail_chatbot/app/: core.py
showup-tools/gmail_chatbot/gmail_chatbot/gui/: __init__.py  core.py
showup-tools/gmail_chatbot/gmail_chatbot/handlers/: __init__.py  triage.py
showup-tools/gmail_chatbot/gmail_chatbot/ml_classifier/: README.md  classifier_model.joblib  fix_code_style.py  preference_training_data.py  test_integration.py  test_ml_classifier.py  verify_model.py
showup-tools/gmail_chatbot/scripts/: fix_token.py  minimal_import_test.py  test_guardrail_direct.py
showup-tools/gmail_chatbot/test_vector_cache/: email_metadata.json
showup-tools/gmail_chatbot/tests/: test_agentic_executor.py  test_classifier.py  test_claude_api_client.py  test_email_gmail_api.py  test_email_vector_db.py  test_enhanced_memory.py  test_memory_models.py  test_notebook_guardrail.py
(+2389 files in other folders)
