[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail_chatbot"
version = "0.1.0"
description = "Gmail Chatbot Assistant"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["gmail_chatbot"]
include = ["gmail_chatbot*"]

[tool.black]
line-length = 79
target-version = ["py38"]
exclude = """
/(
    build
  | dist
  | data
  | test_vector_cache
)/
"""

[tool.ruff]
line-length = 79
exclude = [
    "build",
    "dist",
    "data",
    "test_vector_cache",
]
